# python-package-demo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  joke_machine.py  pyproject.toml
.github/workflows/: test.yaml
src/joke_machine/: __init__.py  __main__.py  app.py
tests/: conftest.py  test_docs.py  test_favorites.py  test_joke_categories.py  test_joke_machine.py
