[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "joke_machine"
version = "0.1.0"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
description = "A fun command-line joke generator with multiple categories"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Games/Entertainment",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pre-commit",
    "mypy",
]

[project.urls]
"Homepage" = "https://github.com/lkstrp/python-package-demo"
"Bug Tracker" = "https://github.com/lkstrp/python-package-demo/issues"

[project.scripts]
joke-machine = "joke_machine:main"